--- a/app/src/main/res/layout/activity_lichthi.xml
+++ b/app/src/main/res/layout/activity_lichthi.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:text="MSV : 1911505310205"
         android:textColor="#000000"
-        android:textSize="14sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Họ tên : Nguyễn Văn A"
+        android:textSize="20dp"
         android:textColor="#000000"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -191,46 +192,48 @@
 
     <RelativeLayout
         android:id="@+id/relativeLayout5"
-        android:layout_width="155dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="250dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="80dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints"
+        android:orientation="horizontal"
         >
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:text="Lịch Thi"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.369" />
         <Spinner
-
             android:id="@+id/spinner1"
             android:layout_width="150dp"
             android:layout_height="match_parent"
-
             android:background="@drawable/menu"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/textView"
+            app:layout_constraintEnd_toEndOf="@id/textView"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_toRightOf="@+id/textView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.204"
-
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints"
+            android:layout_marginLeft="20dp" />
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lịch học"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/relativeLayout5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.369" />
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
