--- a/app/src/main/res/layout/expandable_list_group.xml
+++ b/app/src/main/res/layout/expandable_list_group.xml
@@ -4,18 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="?android:listPreferredItemPaddingLeft"
-    android:paddingLeft="45dp"
-    android:paddingStart="45dp">
+    android:paddingLeft="10dp"
+    android:paddingStart="10dp"
+    >
 
     <TextView
         android:id="@+id/textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:background="@drawable/groupkq"
         android:text="item"
-        android:padding="10dp"
+        android:fontFamily="@font/roboto_medium"
+        android:padding="30dp"
         android:textColor="#000"
-        android:textSize="17sp" />
+        android:textSize="20sp" />
 
 
 </LinearLayout>
