--- a/app/src/main/res/drawable/edittext_edit.xml
+++ b/app/src/main/res/drawable/edittext_edit.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/bluesky" android:width="1dp"/>
-    <corners android:radius="10dp"/>
-    <solid android:color="@color/bluesky"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:width="1dp"
+        android:color="#1a8fc5" />
+    <corners android:radius="15dp"/>
+    <solid android:color="@color/white"/>
 </shape>
