--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,21 +16,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
         <EditText
+
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
-            android:paddingLeft="20dp"
+            android:paddingLeft="10dp"
             android:background="@drawable/edittext_edit"
+            android:drawableLeft="@drawable/ic_action_name"
+            android:textColor="@color/black"
             android:hint="Student Code"/>
         <EditText
+            android:drawableLeft="@drawable/ic_action_password"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
-            android:paddingLeft="20dp"
+            android:paddingLeft="10dp"
             android:background="@drawable/edittext_edit"
             android:inputType="textPassword"
             android:hint="Password"/>
