--- a/app/src/main/res/layout/chatbox_details.xml
+++ b/app/src/main/res/layout/chatbox_details.xml
@@ -110,10 +110,9 @@
             android:id="@+id/message_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/layout_name_chatbox"
             android:layout_above="@+id/layout_send_message"
-            android:layout_marginBottom="5dp"
-            >
+            android:layout_below="@+id/layout_name_chatbox"
+            android:layout_marginBottom="5dp">
 
         </androidx.recyclerview.widget.RecyclerView>
 
