--- a/app/src/main/res/layout/activity_lichthi.xml
+++ b/app/src/main/res/layout/activity_lichthi.xml
@@ -222,7 +222,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lịch học"
+        android:text="Lịch thi"
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="bold"
