--- a/app/src/main/res/layout/popup_studeninfo.xml
+++ b/app/src/main/res/layout/popup_studeninfo.xml
@@ -31,9 +31,9 @@
         android:layout_below="@id/popup_top"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="15dp"
-        android:textSize="16dp"
+        android:text="Địa chỉ email"
         android:textColor="@color/black"
-        android:text="Địa chỉ email" />
+        android:textSize="16dp" />
 
     <EditText
         android:id="@+id/edit_info"
@@ -43,33 +43,68 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="5dp"
         android:hint="@string/edittext_hint"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:visibility="invisible"
+        />
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/spin_gender"
+        android:layout_below="@+id/textview_editInfo"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/white"
+        android:visibility="invisible"
 
-    <Button
+        />
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/datePickerButton"
+        android:text="03 01 2001"
+        android:textSize="16dp"
+        android:textColor="@color/black"
+        android:background="@color/white"
+        android:layout_below="@+id/textview_editInfo"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:onClick="openDatePicker"
+        android:visibility="invisible"
+        />
+
+
+    <TextView
+        android:id="@+id/gender_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_submitPopup"
-        android:layout_width="70dp"
-        android:layout_height="30dp"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/white"
+        android:background="@drawable/button_dialog"
         android:text="Xác nhận"
         android:textAllCaps="false"
         android:textSize="14dp"
-        style="?android:attr/borderlessButtonStyle"
 
         />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_closePopup"
-        android:layout_width="70dp"
-        android:layout_height="30dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/white"
+        android:background="@drawable/button_dialog"
         android:text="Đóng"
         android:textAllCaps="false"
         android:textSize="14dp"
