--- a/app/src/main/res/layout/infomation_student.xml
+++ b/app/src/main/res/layout/infomation_student.xml
@@ -113,6 +113,19 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/logout" />
 
+        <ImageButton
+            android:id="@+id/btn_changePassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="30dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/password_24" />
+
+
+
     </RelativeLayout>
 
     <ScrollView
